# UnrealLogViewer

./: .gitignore  CMakeLists.txt  CompilerErrors.txt  DETAIL_VIEW_FIXES_SUMMARY.md  DETAIL_VIEW_SIZING_FIX.md  ENHANCED_DETAIL_VIEW_SUMMARY.md  LOGVIEW_PERFORMANCE_FIX.md  UI_IMPROVEMENTS_SUMMARY.md  VISUAL_HIERARCHY_IMPLEMENTATION_SUMMARY.md  VISUAL_POLISH_IMPLEMENTATION_SUMMARY.md  VISUAL_SELECTION_COMPATIBILITY_TEST_SUMMARY.md  VISUAL_SELECTION_COMPREHENSIVE_TEST_SUMMARY.md  autotest_report.txt  build.sh  build_script.bat  build_with_cmake.bat  categories_window.cpp  categories_window.h  debug_file_monitor.cpp  expanded_window.cpp  expanded_window.h  filter_manager.cpp  filter_manager.h  focusable_window.cpp  focusable_window.h  hierarchical_search_manager.h  input_manager.cpp  input_manager.h  input_window.cpp  input_window.h  log.txt  log_entry.cpp  log_entry.h  log_viewer.cpp  log_viewer.h  log_window.cpp  log_window.h  macros.h  main.cpp  test_background_updates.cpp  (+52 more)
.claude/: settings.local.json
.kiro/specs/cli-autotest-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-log-tailing/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-search-filtering/: design.md  requirements.md  tasks.md
.kiro/specs/folder-browsing-support/: design.md  requirements.md  tasks.md
.kiro/specs/minor-ux-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/search-filter-improvements/: requirements.md
.kiro/specs/text-highlighting-bug-fix/: design.md  requirements.md  tasks.md
.kiro/specs/ui-visual-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/unreal-log-viewer/: design.md  requirements.md  tasks.md
.kiro/specs/vim-visual-selection/: design.md  requirements.md  tasks.md
app/: main.cpp
app/ui/: filter_panel.cpp  filter_panel.h  main_window.cpp  main_window.h
lib/common/: result.cpp  result.h  unreal_project_utils.cpp  unreal_project_utils.h
lib/config/: config_manager.cpp  config_manager.h
lib/core/: autotest_runner.cpp  autotest_runner.h  filter_manager.cpp  filter_manager.h  log_processor.cpp  log_processor.h
lib/file_monitor/: file_monitor.cpp  file_monitor.h
lib/filter_engine/: filter.cpp  filter.h  filter_engine.cpp  filter_engine.h  filter_expression.cpp  filter_expression.h
lib/log_parser/: log_entry.cpp  log_entry.h  log_parser.cpp  log_parser.h
lib/ui/: component.h  file_browser.cpp  file_browser.h  filter_builder.h  filter_panel.cpp  filter_panel.h  log_entry_renderer.cpp  log_entry_renderer.h  main_window.cpp  main_window.h  relative_line_number_system.cpp  relative_line_number_system.h  visual_theme_manager.cpp  visual_theme_manager.h
tests/: test_column_spacing.cpp  test_config_manager.cpp  test_detail_view_focus.cpp  test_file_browser.cpp  test_file_monitor.cpp  test_filter_engine.cpp  test_integration.cpp  test_log_entry_renderer.cpp  test_log_parser.cpp  test_main.cpp  test_main_window.cpp  test_multiline_parsing.cpp  test_relative_line_number_system.cpp  test_result.cpp  test_simple_integration.cpp  test_unreal_project_utils.cpp  test_visual_hierarchy_comprehensive.cpp  test_visual_polish_integration.cpp  test_visual_selection_clipboard.cpp  test_visual_selection_comprehensive.cpp  test_visual_selection_comprehensive_validation.cpp  test_visual_selection_error_handling.cpp  test_visual_selection_extension.cpp  test_visual_selection_feature_compatibility.cpp  test_visual_selection_filter_interaction.cpp  test_visual_selection_manual_scenarios.cpp  test_visual_selection_performance.cpp  test_visual_selection_rendering.cpp  test_visual_selection_status_bar.cpp  test_visual_theme_manager.cpp  test_y_key_copy_functionality.cpp
